--- a/.github/workflows/latest-blog-post.yml
+++ b/.github/workflows/latest-blog-post.yml
@@ -1,7 +1,7 @@
 name: Latest blog post
 on:
     schedule:
-        - cron: "30 21 * * *"
+        - cron: "0 * * * *"
     workflow_dispatch:
 jobs:
     update-readme-with-blog:
@@ -13,3 +13,4 @@ jobs:
               with:
                     max_post_count: "5"
                     feed_list: "https://ja-errorpro.cf/posts/index.xml"
+                    template: '[$title](https://ja-errorpro.cf/$url)'
