--- a/.github/workflows/latest-blog-post.yml
+++ b/.github/workflows/latest-blog-post.yml
@@ -13,4 +13,4 @@ jobs:
               with:
                     max_post_count: "5"
                     feed_list: "https://ja-errorpro.cf/posts/index.xml"
-                    template: '$newline[$title](https://ja-errorpro.cf/$url)$newline'
+                    template: '<tr><td><a href="https://ja-errorpro.cf$url">$title</a></td></tr>'
