--- a/.github/workflows/latest-blog-post.yml
+++ b/.github/workflows/latest-blog-post.yml
@@ -13,4 +13,4 @@ jobs:
               with:
                     max_post_count: "5"
                     feed_list: "https://ja-errorpro.codes/posts/index.xml"
-                    template: '<tr><td><a href="https://ja-errorpro.codes$url">$title</a></td></tr>'
+                    template: '<tr><td><a href="$url">$title</a></td></tr>'
